--- a/201104_Python.ipynb
+++ b/201104_Python.ipynb
@@ -1993,18 +1993,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = [-21, 16, 24, 57, 41, -15, 80, -18, -78, 16, -92, 4, -100, 51, 46]\n",
-      "min = -100, max = 80\n",
-      "minid = 12, maxid = 6\n",
-      "sum = -168\n",
-      "memory = 323\n"
+      "a = [100, -41, -94, 7, -64, 11, -4, -92, -61, -4, 83, 53, 28, -96, -46]\n",
+      "min = -96, max = 100\n",
+      "minid = 13, maxid = 0\n",
+      "sum = -178\n",
+      "memory = 1431\n"
      ]
     }
    ],
@@ -2039,7 +2039,7 @@
     "    print(f\"minid = {minid}, maxid = {maxid}\")\n",
     "    summ = sum(a[min(minid, maxid):max(minid, maxid)]) - a[min(minid, maxid)]\n",
     "    print(f\"sum = {summ}\")\n",
-    "    memory = sum(get_size(x, print_res = False) for x in list(locals()))\n",
+    "    memory = sum(get_size(x, print_res = False) for x in locals().items())\n",
     "    print(f\"memory = {memory}\")\n",
     "\n",
     "summary()"
